Updated using "make update_contributors" but we still have some duplicates
I am blaming tributors somewhere adding them from commits

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -378,6 +378,15 @@
         },
         {
             "contributions": [
+                "code",
+                "doc"
+            ],
+            "login": "AugustijnVrolijk",
+            "name": "Augustijn Vrolijk",
+            "profile": "https://github.com/AugustijnVrolijk"
+        },
+        {
+            "contributions": [
                 "doc"
             ],
             "login": "aysegul_gunduz",
@@ -439,6 +448,15 @@
             "login": "bthirion",
             "name": "Bertrand Thirion",
             "profile": "https://github.com/bthirion"
+        },
+        {
+            "contributions": [
+                "doc",
+                "code"
+            ],
+            "login": "bclenet",
+            "name": "Boris Clénet",
+            "profile": "https://github.com/bclenet"
         },
         {
             "avatar_url": "https://avatars.githubusercontent.com/u/58030?v=4",
@@ -665,6 +683,17 @@
             "name": "Clint Hansen"
         },
         {
+            "avatar_url": [
+                "https://avatars.githubusercontent.com/u/51133164?v=4"
+            ],
+            "contributions": [
+                "code", "doc"
+            ],
+            "login": "CodyCBakerPhD",
+            "name": "CodyCBakerPhD",
+            "profile": "https://github.com/CodyCBakerPhD"
+        },
+        {
             "avatar_url": "https://avatars.githubusercontent.com/u/4772878?v=4",
             "contributions": [
                 "question",
@@ -727,6 +756,14 @@
             ],
             "login": "daniel_a_handwerker",
             "name": "Daniel A. Handwerker"
+        },
+        {
+            "contributions": [
+                "doc"
+            ],
+            "login": "drammock",
+            "name": "Daniel McCloy",
+            "profile": "https://github.com/drammock"
         },
         {
             "contributions": [
@@ -1294,7 +1331,6 @@
             "profile": "https://www.fil.ion.ucl.ac.uk/team/spm-team/"
         },
         {
-            "avatar_url": "https://avatars.githubusercontent.com/u/4451818?v=4",
             "contributions": [
                 "ideas",
                 "design",
@@ -1313,7 +1349,7 @@
                 "talk"
             ],
             "login": "guiomar",
-            "name": "Julia Guiomar Niso Galán",
+            "name": "Guiomar Niso",
             "profile": "http://guiomarniso.com"
         },
         {
@@ -1774,6 +1810,29 @@
             "login": "JosephGWoods",
             "name": "Joseph Woods",
             "profile": "https://www.ndcn.ox.ac.uk/team/joseph-woods"
+        },
+        {
+            "avatar_url": "https://avatars.githubusercontent.com/u/4451818?v=4",
+            "contributions": [
+                "ideas",
+                "design",
+                "fundingFinding",
+                "review",
+                "eventOrganizing",
+                "blog",
+                "tool",
+                "bug",
+                "code",
+                "data",
+                "tutorial",
+                "question",
+                "doc",
+                "example",
+                "talk"
+            ],
+            "login": "guiomar",
+            "name": "Julia Guiomar Niso Galán",
+            "profile": "http://guiomarniso.com"
         },
         {
             "avatar_url": "https://avatars.githubusercontent.com/u/8088860?v=4",
@@ -3408,6 +3467,14 @@
         },
         {
             "contributions": [
+                "doc"
+            ],
+            "login": "tstoeter",
+            "name": "Torsten Stöter",
+            "profile": "https://github.com/tstoeter"
+        },
+        {
+            "contributions": [
                 "doc",
                 "tool",
                 "bug"
@@ -3601,6 +3668,39 @@
             "name": "Zhi-De Deng"
         },
         {
+            "avatar_url": [
+                "https://avatars.githubusercontent.com/u/117362283?v=4"
+            ],
+            "contributions": [
+                "code"
+            ],
+            "login": "bclenet",
+            "name": "bclenet",
+            "profile": "https://github.com/bclenet"
+        },
+        {
+            "avatar_url": [
+                "https://avatars.githubusercontent.com/u/844306?v=4"
+            ],
+            "contributions": [
+                "code"
+            ],
+            "login": "bendichter",
+            "name": "bendichter",
+            "profile": "https://github.com/bendichter"
+        },
+        {
+            "avatar_url": [
+                "https://avatars.githubusercontent.com/u/1810515?v=4"
+            ],
+            "contributions": [
+                "code"
+            ],
+            "login": "drammock",
+            "name": "drammock",
+            "profile": "https://github.com/drammock"
+        },
+        {
             "avatar_url": "https://avatars.githubusercontent.com/u/39155887?v=4",
             "contributions": [
                 "code"
@@ -3639,78 +3739,23 @@
             "profile": "https://github.com/patrick-g-h"
         },
         {
+            "avatar_url": [
+                "https://avatars.githubusercontent.com/u/4901704?v=4"
+            ],
+            "contributions": [
+                "code"
+            ],
+            "login": "tstoeter",
+            "name": "tstoeter",
+            "profile": "https://github.com/tstoeter"
+        },
+        {
             "contributions": [
                 "data",
                 "code"
             ],
             "login": "étienne_bergeron",
             "name": "Étienne Bergeron"
-        },
-        {
-            "login": "bclenet",
-            "name": "bclenet",
-            "contributions": [
-                "code"
-            ],
-            "profile": "https://github.com/bclenet",
-            "avatar_url": [
-                "https://avatars.githubusercontent.com/u/117362283?v=4"
-            ]
-        },
-        {
-            "login": "tstoeter",
-            "name": "tstoeter",
-            "contributions": [
-                "code"
-            ],
-            "profile": "https://github.com/tstoeter",
-            "avatar_url": [
-                "https://avatars.githubusercontent.com/u/4901704?v=4"
-            ]
-        },
-        {
-            "login": "AugustijnVrolijk",
-            "name": "AugustijnVrolijk",
-            "contributions": [
-                "code"
-            ],
-            "profile": "https://github.com/AugustijnVrolijk",
-            "avatar_url": [
-                "https://avatars.githubusercontent.com/u/96262227?v=4"
-            ]
-        },
-        {
-            "login": "CodyCBakerPhD",
-            "name": "CodyCBakerPhD",
-            "contributions": [
-                "code"
-            ],
-            "profile": "https://github.com/CodyCBakerPhD",
-            "avatar_url": [
-                "https://avatars.githubusercontent.com/u/51133164?v=4"
-            ]
-        },
-        {
-            "login": "drammock",
-            "name": "drammock",
-            "contributions": [
-                "code"
-            ],
-            "profile": "https://github.com/drammock",
-            "avatar_url": [
-                "https://avatars.githubusercontent.com/u/1810515?v=4"
-            ]
-        },
-        {
-            "login": "bendichter",
-            "name": "bendichter",
-            "contributions": [
-                "code"
-            ],
-            "profile": "https://github.com/bendichter",
-            "avatar_url": [
-                "https://avatars.githubusercontent.com/u/844306?v=4"
-            ]
         }
     ],
     "contributorsPerLine": 7
