[DATALAD RUNCMD] make update_contributors
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "make update_contributors",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [
  ".tributors"
 ],
 "outputs": [
  ".all-contributorsrc",
  "CITATION.cff",
  "README.md"
 ],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -424,6 +424,16 @@
             "profile": "https://github.com/musicinmybrain"
         },
         {
+            "contributions": [
+                "doc",
+                "code",
+                "test"
+            ],
+            "login": "bendichter",
+            "name": "Benjamin Dichter",
+            "profile": "https://bendichter.com/"
+        },
+        {
             "avatar_url": [
                 "https://avatars.githubusercontent.com/u/844306?v=4"
             ],
