--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ doc = [
 ]
 
 [tool.bumpversion]
-current_version = "1.10.1-dev"
+current_version = "1.10.1"
 parse = """(?x)
     (?P<major>[0-9]+)
     \\.(?P<minor>[0-9]+)
