--- a/src/schema/rules/directories.yaml
+++ b/src/schema/rules/directories.yaml
@@ -23,6 +23,7 @@ study:
       - docs
       - derivatives
       - logs
+      - scratch
       - sourcedata
   code:
     name: code
@@ -38,6 +39,10 @@ study:
     opaque: true
   logs:
     name: logs
+    level: optional
+    opaque: true
+  scratch:
+    name: scratch
     level: optional
     opaque: true
   sourcedata:
@@ -76,10 +81,6 @@ raw:
     name: phenotype
     level: optional
     opaque: false
-  scratch:
-    name: scratch
-    level: optional
-    opaque: true
   sourcedata:
     name: sourcedata
     level: optional
