Added entities for the photo specific to microephys

--- a/src/schema/rules/files/raw/photo.yaml
+++ b/src/schema/rules/files/raw/photo.yaml
@@ -28,3 +28,15 @@ photo__micr:
   entities:
     $ref: rules.files.raw.photo.photo.entities
     sample: required
+
+# microephys photo has sample and space entities like other
+# microephys files and unlike iEEG
+photo__microephys:
+  $ref: rules.files.raw.photo.photo
+  datatypes:
+    - ecephys
+    - icephys
+  entities:
+    $ref: rules.files.raw.photo.photo.entities
+    sample: optional
+    space: optional
