--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -901,7 +901,7 @@ DOI:
   name: DOI
   display_name: DOI
   description: |
-    Used to specify the locations of all source datasets.
+    Used to specify the locations of all source datasets (BIDS or not).
     (see [URI](SPEC_ROOT/common-principles.md#uniform-resource-indicator))
   type: string
 DoseCalibrationFactor:
@@ -3543,7 +3543,7 @@ SourceDatasets:
   name: SourceDatasets
   display_name: Source Datasets
   description: |
-    Used to specify the locations and relevant attributes of all source datasets.
+    Used to specify the locations and relevant attributes of all source datasets (BIDS or not).
     Valid keys in each object include `"URL"`, `"DOI"` (see
     [URI](SPEC_ROOT/common-principles.md#uniform-resource-indicator)), and
     `"Version"` with
@@ -3985,7 +3985,7 @@ URL:
   name: URL
   display_name: URL
   description: |
-    Used to specify the locations of all source datasets.
+    Used to specify the locations of all source datasets (BIDS or not).
     (see [URI](SPEC_ROOT/common-principles.md#uniform-resource-indicator))
   type: string
   format: uri
