--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -901,7 +901,7 @@ DOI:
   name: DOI
   display_name: DOI
   description: |
-    Used to specify the locations of all source datasets (BIDS or not).
+    A Digital Object Identifier (DOI) is a persistent, resolvable name for a digital resource.
     (see [URI](SPEC_ROOT/common-principles.md#uniform-resource-indicator))
   type: string
 DoseCalibrationFactor:
@@ -3985,7 +3985,8 @@ URL:
   name: URL
   display_name: URL
   description: |
-    Used to specify the locations of all source datasets (BIDS or not).
+    A Uniform Resource Locator (URL) is a structured reference to an object that
+    includes a resource transfer scheme and a location.
     (see [URI](SPEC_ROOT/common-principles.md#uniform-resource-indicator))
   type: string
   format: uri
