Fix stimuli directory schema validation
- Change stimuli directory from opaque: true to opaque: false
- Enables proper schema validation of /stimuli directory contents
- Follows phenotype pattern for root-level directory validation
- Required for validator compatibility with stimuli files

--- a/src/schema/rules/directories.yaml
+++ b/src/schema/rules/directories.yaml
@@ -83,7 +83,7 @@ raw:
   stimuli:
     name: stimuli
     level: optional
-    opaque: true
+    opaque: false
   subject:
     entity: subject
     level: required
@@ -141,7 +141,7 @@ derivative:
   stimuli:
     name: stimuli
     level: optional
-    opaque: true
+    opaque: false
   subject:
     entity: subject
     level: optional
