Fix invalid selector syntax in stimuli sidecar schema
Change from invalid multiple AND selectors to proper OR logic using
intersects() function. This resolves validator compatibility issues
that were causing TypeError exceptions when parsing custom schemas.

- Fix: Use intersects([suffix], ["audio", "video", "audiovideo", "image"])
- Before: Multiple separate suffix == conditions (invalid AND logic)
- Result: Schema now validates successfully with bids-validator 2.1.0

--- a/src/schema/rules/sidecars/stimuli.yaml
+++ b/src/schema/rules/sidecars/stimuli.yaml
@@ -4,10 +4,7 @@
 
 Stimuli:
   selectors:
-    - suffix == "audio"
-    - suffix == "video"
-    - suffix == "audiovideo"
-    - suffix == "image"
+    - intersects([suffix], ["audio", "video", "audiovideo", "image"])
   fields:
     StimulusLicense: recommended
     Copyright: recommended
