Add missing 'type' metadata field for stimulus JSON sidecars
The stimuli JSON sidecar files contain a 'type' field that was causing
validator TypeError because no metadata definition existed. Added the
'type' field definition to enable proper validation of stimulus metadata.

- Existing: type__stimuli column for TSV files
- Added: type metadata field for JSON sidecar files
- Enables validation of stim-<label>_<suffix>.json files

--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -4211,3 +4211,10 @@ iEEGReference:
     this field should have a general description and the channel specific
     reference should be defined in the `channels.tsv` file.
   type: string
+type:
+  name: type
+  display_name: Type
+  description: |
+    Type of stimulus file (for example, image, audio, video, audiovideo).
+    Refers to the suffix of the stimulus file when present in stimulus metadata.
+  type: string
