Separate metadata fields from TSV columns in events rules

--- a/src/schema/rules/tabular_data/events.yaml
+++ b/src/schema/rules/tabular_data/events.yaml
@@ -9,6 +9,7 @@ Events:
     response_time: optional
     HED: optional
     stim_file: optional
+    stim_id: optional
     channel:
       level: optional
       description_addendum: |
