--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -882,7 +882,8 @@ audio:
   display_name: Audio stimulus file
   description: |
     Any data file used as an audio stimulus. Media files usually have an audio file type (such as wav, mp3, aac, ogg).
-    The JSON sidecar associated with each media file should contain information to describe the origin and the nature of the media.
+    The JSON sidecar associated with each media file should contain information to describe the origin and the
+    nature of the media.
     However, in the case of the imposed distribution restrictions of the stimulus, the media stimulus file may not be
     present with only JSON sidecar file containing the aforementioned pertinent metadata.
 image:
@@ -890,7 +891,8 @@ image:
   display_name: Image stimulus file
   description: |
     Any data file used as an image stimulus. Media files usually have an image file type (such as jpg, png, svg).
-    The JSON sidecar associated with each media file should contain information to describe the origin and the nature of the media.
+    The JSON sidecar associated with each media file should contain information to describe the origin and the
+    nature of the media.
     However, in the case of the imposed distribution restrictions of the stimulus, the media stimulus file may not be
     present with only JSON sidecar file containing the aforementioned pertinent metadata.
 video:
@@ -898,7 +900,8 @@ video:
   display_name: Video stimulus file
   description: |
     Any data file used as a video stimulus. Media files usually have a video file type (such as mp4, avi, mkv, webm).
-    The JSON sidecar associated with each media file should contain information to describe the origin and the nature of the media.
+    The JSON sidecar associated with each media file should contain information to describe the origin and the
+    nature of the media.
     However, in the case of the imposed distribution restrictions of the stimulus, the media stimulus file may not be
     present with only JSON sidecar file containing the aforementioned pertinent metadata.
 audiovideo:
@@ -907,6 +910,7 @@ audiovideo:
   description: |
     Any data file used as an audiovideo stimulus. Media files usually have an audiovideo file type (such as mp4, avi,
     mkv, webm).
-    The JSON sidecar associated with each media file should contain information to describe the origin and the nature of the media.
+    The JSON sidecar associated with each media file should contain information to describe the origin and the
+    nature of the media.
     However, in the case of the imposed distribution restrictions of the stimulus, the media stimulus file may not be
     present with only JSON sidecar file containing the aforementioned pertinent metadata.
