--- a/src/schema/rules/checks/stimuli.yaml
+++ b/src/schema/rules/checks/stimuli.yaml
@@ -10,7 +10,7 @@ StimulusIdExists:
     - suffix == "events"
     - '"stim_id" in columns'
   checks:
-    - for_any(columns.stim_id, lambda id: id == "n/a" or exists("stimuli/stim-" + id))
+    - 'for_any(columns.stim_id, lambda id: id == "n/a" or exists("stimuli/stim-" + id))'
 
 StimuliDirectoryStructure:
   issue:
