--- a/src/schema/objects/entities.yaml
+++ b/src/schema/objects/entities.yaml
@@ -235,6 +235,14 @@ part:
     - $ref: objects.enums.phase.value
     - $ref: objects.enums.real.value
     - $ref: objects.enums.imaginary.value
+part__stimuli:
+  name: part
+  display_name: Stimulus Part
+  description: |
+    For stimulus files, `part-<label>` can be used to distinguish different parts of a single stimulus,
+    such as chapters in an audiobook or segments of a long movie (for example, `part-1`, `part-2`, `part-epilog`).
+  type: string
+  format: label
 processing:
   name: proc
   display_name: Processed (on device)
