Fix metaschema and expression parsing for stimuli
- Update metaschema to support stem-based rules in raw files
- Add path support to both stemRule and suffixRule for stimuli
- Fix stimuli check expression to use valid syntax instead of lambda
- Replace for_any/lambda with standard exists/count expression pattern

--- a/src/schema/rules/checks/stimuli.yaml
+++ b/src/schema/rules/checks/stimuli.yaml
@@ -10,7 +10,7 @@ StimulusIdExists:
     - suffix == "events"
     - '"stim_id" in columns'
   checks:
-    - 'for_any(columns.stim_id, lambda id: id == "n/a" or exists("stimuli/stim-" + id))'
+    - exists(columns.stim_id, "stimuli") == length(columns.stim_id) - count(columns.stim_id, "n/a")
 
 StimuliDirectoryStructure:
   issue:
