Fix stimuli.yaml structure and create proper root-level template macro
- Remove incorrect datatype designation from stimuli rules
- Create schema-driven root filename template macro for path-based rules
- Update stimuli.md to use proper root template macro
- Fix understanding: stimuli is root-level directory, not subject datatype

--- a/src/schema/rules/files/raw/stimuli.yaml
+++ b/src/schema/rules/files/raw/stimuli.yaml
@@ -1,5 +1,5 @@
 ---
-# Define the stimuli files
+# Define the stimuli files (root-level directory, not subject-scoped)
 stimuli_table:
   level: recommended
   path: stimuli
@@ -8,8 +8,6 @@ stimuli_table:
     - .json
     - .tsv
   entities: {} # No entities apply to the stimuli.tsv/json index files themselves
-  datatypes:
-    - stimuli
 
 annotations_table:
   level: recommended
@@ -20,8 +18,6 @@ annotations_table:
     - .tsv
   entities:
     stimulus: optional # The annotations table can be global or stimulus-specific
-  datatypes:
-    - stimuli
 
 stimulus_audio:
   level: optional
@@ -37,8 +33,6 @@ stimulus_audio:
   entities:
     stimulus: required
     part: optional
-  datatypes:
-    - stimuli
 
 stimulus_image:
   level: optional
@@ -55,8 +49,6 @@ stimulus_image:
   entities:
     stimulus: required
     part: optional
-  datatypes:
-    - stimuli
 
 stimulus_video:
   level: optional
@@ -72,8 +64,6 @@ stimulus_video:
   entities:
     stimulus: required
     part: optional
-  datatypes:
-    - stimuli
 
 stimulus_audiovideo:
   level: optional
@@ -89,8 +79,6 @@ stimulus_audiovideo:
   entities:
     stimulus: required
     part: optional
-  datatypes:
-    - stimuli
 
 stimulus_annotations_events: # Renamed for clarity, representing the annot-<label>_events files
   level: optional
@@ -104,5 +92,3 @@ stimulus_annotations_events: # Renamed for clarity, representing the annot-<labe
     stimulus: required
     annotation: required
     part: optional
-  datatypes:
-    - stimuli
