--- a/src/schema/rules/sidecars/continuous.yaml
+++ b/src/schema/rules/sidecars/continuous.yaml
@@ -43,6 +43,7 @@ PhysioEvents:
   fields:
     Columns: required
     Description: recommended
+    ForeignIndexColumn: recommended
 
 # Eye-tracking
 EyeTrack:
